welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:5: error: illegal start of simple expression
       while(      )
                   ^SlugSnail:13: error: ')' expected but '}' found.
    }
    ^