welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
    def hunt(c:Color) 
    {

       while(      )
       {




       	
       }
    }
   
   def isFacingTrail():Boolean =
{

	if(estFaceMur)
	{
	return false
	}

		else
		{
			avance()
			if(getCouleurSol()==Color)
			{
				recule()
				return true
				
			}
				else
				{
				recule()
				return false
				}
		}
		
}
 

